Fix enriched roll icon & reveal button color in dark mode

--- a/less/v2/dark/apps.less
+++ b/less/v2/dark/apps.less
@@ -65,6 +65,11 @@
       }
     }
 
+    .secret .reveal {
+      border-color: var(--dnd5e-color-blue-white);
+      color: var(--color-text-light-3);
+    }
+
     .prosemirror menu {
       --color-hover-bg: var(--dnd5e-color-blue-gray-3);
       --color-control-bg: var(--dnd5e-color-blue-gray-2);
